fixed alignment issues

--- a/src/styles/single_product_styles.css
+++ b/src/styles/single_product_styles.css
@@ -3,13 +3,15 @@
     flex-direction: column;
     align-items: center;
     overflow: hidden;
+    width: 70%;
 }
 
 .product {
     display: flex;
     flex-direction: row;
-    justify-content: stretch;
+    justify-content: space-between;
     align-items: flex-start;
+    width: 100%;
 }
 
 .product>div:first-child {
@@ -67,9 +69,10 @@
 .pictures-rating {
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
+    justify-content: space-evenly;
     align-items: center;
-    padding-top: 25px;
+    margin: 10px;
+    height: 100%;
 }
 
 .product-picture {
@@ -104,21 +107,17 @@
 
 /* ---------- product description ----------- */
 .product-details {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    padding: 10px;
-    margin-top: 0px;
-    margin-bottom: 0px;
+    height: 100%;
+    margin: 10px;
+    height: 100%;
 }
 
-
 .single-product-name {
-    font-size: 32px;
-    margin-top: 5px;
+    margin-top: 10px;
     margin-bottom: 0px;
-    padding-top: 0px;
-    padding-bottom: 0px;
+    font-size: 30px;
+    font-weight: 450;
+
 }
 
 .price {
@@ -126,11 +125,11 @@
     flex-direction: row;
     justify-content: flex-start;
     align-items: baseline;
-    padding: 10px;
-    margin-top: 0px;
-    margin-bottom: 0px;
-    padding-top: 0px;
-    padding-bottom: 0px;
+}
+
+.price p {
+    margin-top: 10px;
+
 }
 
 .pricetag {
@@ -143,35 +142,14 @@
     color: grey;
 }
 
-.product-description {
-    padding: 10px;
-    margin-top: 0px;
-    margin-bottom: 0px;
-}
 
-.product-size {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    padding: 10px;
-    margin-top: 0px;
-    margin-bottom: 0px;
+.hide-text {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
 }
-
-.volume {
-    margin-right: 10px;
-}
-
-.volume-modifier-button {
-    background-color: white;
-    border: none;
-    color: #000;
-}
-
-.volume-modifier-button:hover {
-    text-shadow: rgb(200, 200, 200) 0px 1px 1px;
-}
-
 
 
 /* ---------- purchase stuff ----------- */
@@ -179,13 +157,14 @@
 .purchase-details {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: space-evenly;
     align-items: center;
+    margin: 10px;
+    height: 100%;
 }
 
 .delivery-details {
     font-size: small;
-    margin-top: 5px;
 }
 
 .address {
@@ -280,14 +259,46 @@
 
     .product {
         flex-direction: column;
+        align-items: center;
     }
 
     .suggested-items {
         flex-direction: column;
     }
 
+    .product-details {
+        align-items: center;
+    }
+
+    .purchase-details {
+        flex-direction: row;
+        align-items: center;
+    }
+
+    .quantity-modifier {
+        margin-right: 10px;
+        display: flex;
+        flex-direction: column;
+    }
+
+    .quantity p {
+        display: none;
+    }
+
+    .share-like {
+        display: none;
+    }
+
+    .delivery-details {
+        display: none;
+    }
+
     .right-panel {
         display: none;
+    }
+
+    .center-panel {
+        width: 100%;
     }
 
     .left-panel {
